[package]
name = "snips-nlu-utils"
version = "0.9.1"
authors = ["Adrien Ball <adrien.ball@snips.ai>"]
edition = "2018"

[workspace]
members = [
    "python/ffi"
]

[dependencies]
itertools = "0.9"
lazy_static = "1.4"
libc = "0.2"
regex = "1.3"
unicode-normalization = "0.1"
failure = "0.1"
fnv = "1.0"
